# flake8_assignment_expressions

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flake8_assignment_expressions.py  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
tests/: test_flake8_assignment_expressions.py
