[metadata]
name = flake8_assignment_expressions
version = 1.0.0
description = A flake8 plugin that disallows assignment expressions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GambitingMan/flake8_assignment_expressions
author = Nermin Dedovic
author_email = nermin_dedovic@hotmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules = flake8_assignment_expressions
install_requires = flake8>=3.7
python_requires = >=3.8

[options.entry_points]
flake8.extension =
    ASE101=flake8_assignment_expressions:Plugin

[flake8]
max-line-length = 120
exclude = .git,docs,venv

[pycodestyle]
max-line-length = 120
exclude = .git,docs,venv
